--- a/css/work5final.css
+++ b/css/work5final.css
@@ -144,14 +144,14 @@ body{
 }
 .second_right img{
     position: absolute;
-    top: 30%;
+    top: 27%;
     left: 35%;
 }
 .second_right p{
     position: absolute;
     color: #fff;
     font-size: 26px;
-    top: 60%;
+    top: 58%;
     left: 33%;
 }
 .second_right button{
@@ -173,6 +173,10 @@ body{
     margin-top: 10px;
     margin: 0 auto;
     text-align: center;
+}
+.third img{
+    width: 100%;
+    height: 100%;
 }
 .third_title{
     height: 135px;
@@ -198,11 +202,14 @@ body{
     width: 49.5%;
     height: 1020px;
     float: left;
+    font-size: 19px;
+    text-align: left;
 }
 .left_one{
     width: 100%;
     background: #000;
     height: 105px;
+    padding-top: 3%;
     margin-bottom: 2px;
 
 }
@@ -227,6 +234,7 @@ body{
     padding: 0;
 }
 .right_cover{
+    text-align: left;
     position: absolute;
     z-index: 100;
     width: 100%;
@@ -246,6 +254,9 @@ body{
     margin-top: 10px;
     margin: 0 auto;
     text-align: center;
+}
+.fourth img{
+    width: 100%;
 }
 .fourth_title{
     width: 100%;
@@ -317,6 +328,10 @@ body{
     margin: 0 auto;
     background: url(../img/back.png) no-repeat;
 }
+.sixth_top img{
+    width: 100%;
+    height: 100%;
+}
 .sixth_title{
     width: 100%;
     margin: 0 auto;
@@ -337,7 +352,7 @@ body{
     background-size: 250%;
 }
 .top_left{
-    width: 41%;
+    width: 40%;
     height: 100%;
     float: left;
 }
@@ -348,12 +363,13 @@ body{
     display: block;
 }
 .top_right{
-    width: 59%;
+    width: 60%;
     height: 100%;
-    padding: 10% 9.5% 7.5% 9.5%;
+    padding: 10% 9.5% 6.5% 9.5%;
     background: #1c4f7f;
     color: #fff;
     float: left;
+    font-size: 18px;
 }
 .top_right h3{
     text-align: center;
@@ -397,7 +413,9 @@ body{
     font-size: 1.25vw;
     color: #fff;
 }
-
+#top_last{
+    width: 100%;
+}
 /* bottom */
 .bottom{
     width: 100%;
@@ -548,7 +566,7 @@ footer{
         margin-top: 20px;
         width: 100%;
         background: #fff;
-        height: 940px;
+        height: 980px;
     }
     .third_title{
         display: none;
@@ -605,7 +623,7 @@ footer{
     }
     /* fourth */
     .fourth{
-        height: 540px;
+        height: 600px;
     }
     .fourth_title{
         display: none;
@@ -640,7 +658,7 @@ footer{
 
     .sixth_pictures{
         width: 90%;
-        height: 720px;
+        height: 800px;
         position: relative;
     }
     .top_left{
@@ -659,18 +677,18 @@ footer{
         line-height: 50px;
     }
     .top_right{
-        padding-top: 2%;
+        padding-top: 1%;
         position: absolute;
         top: 40%;
         text-align: left;
         width: 100%;
-        height: 28%;
+        height: 32%;
         background: #fff;
         color: #000;
     }
     #top_last{
         position: absolute;
-        bottom:5%;
+        bottom:2%;
     }
     .sixth_last{
         display: none;
@@ -704,7 +722,7 @@ footer{
         position: absolute;
         top: 35%;
         left: 40%;
-        font-size: 15px;
+        font-size: 16px;
     }
 
     /* bottom */
